--- a/index.html
+++ b/index.html
@@ -25,26 +25,26 @@
             </nav>
             <div id="logo">
                 <img src="./img/profile.jpg" alt="プロフィール写真">
-                <h1>煌木　太郎</h1>
+                <h1>桐山　太一郎</h1>
             </div>
         </header>
         <div class="container">
             <section>
                 <h2>About</h2>
                 <h3>自己紹介</h3>
-                <p>煌木　太郎（プログラマー）</p>
-                <p>東京都渋谷区出身。フリーランスで活動しています。</p>
-                <p>最近は、<span class="red">Ruby on Rails</span>を使って仕事をする機会が多くなりました。</p>
+                <p>桐山　太一郎（事務職）</p>
+                <p>岐阜県不破郡出身。事務ですがエンジニア的なこともしています。。</p>
+                <p>最近は、<span class="red">C#とVB.NET</span>を使って仕事をする機会が多くなりました。</p>
                 <p>私のポートフォリオを見て気になった方は、<a href="#">Contact</a>よりご連絡お願いします。</p>
                 <h3>リンク</h3>
                 <ul>
                     <li><a href="#" target="_blank">Facebook</a></li>
                     <li><a href="#" target="_blank">Twitter</a></li>
-                    <li><a href="#" target="_blank">Github</a></li>
+                    <li><a href="https://tuketemiso.github.io" target="_blank">Github</a></li>
                 </ul>
             </section>
             <footer>
-                <p>&copy; 2015 Taro Kirameki.</p>
+                <p>&copy; 2016 Taichiro Kiriyama.</p>
             </footer>
         </div>
     </body>
