--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap Sample</title>
-    <meta name="description" content="サイトの紹介文を書く">
+    <title>My Portforio</title>
+    <meta name="description" content="岐阜県不破郡出身。事務ですがエンジニア的なこともしています。最近は、C#とVB.NETを使って仕事をする機会が多くなりました。">
     <!-- BootstrapのCSS読み込み -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/custom.css">
@@ -36,11 +36,30 @@
                 <p>岐阜県不破郡出身。事務ですがエンジニア的なこともしています。。</p>
                 <p>最近は、<span class="red">C#とVB.NET</span>を使って仕事をする機会が多くなりました。</p>
                 <p>私のポートフォリオを見て気になった方は、<a href="#">Contact</a>よりご連絡お願いします。</p>
+                <h3>My app</h3>
+                <div id="apps" class="row">
+                    <figure class="col-sm-6">
+                        <figcaption>サンプル1</figcaption>
+                        <img src="./img/sample.jpg" alt="サンプル画像1">
+                    </figure>
+                    <figure class="col-sm-6">
+                        <figcaption>サンプル2</figcaption>
+                        <img src="./img/sample.jpg" alt="サンプル画像2">
+                    </figure>
+                    <figure class="col-sm-6">
+                        <figcaption>サンプル3</figcaption>
+                        <img src="./img/sample.jpg" alt="サンプル画像3">
+                    </figure>
+                    <figure class="col-sm-6">
+                        <figcaption>サンプル4</figcaption>
+                        <img src="./img/sample.jpg" alt="サンプル画像4">
+                    </figure>
+                </div>
                 <h3>リンク</h3>
                 <ul>
                     <li><a href="#" target="_blank">Facebook</a></li>
                     <li><a href="#" target="_blank">Twitter</a></li>
-                    <li><a href="https://tuketemiso.github.io" target="_blank">Github</a></li>
+                    <li><a href="https://github.com/tuketemiso" target="_blank">Github</a></li>
                 </ul>
             </section>
             <footer>
